--- a/config_0_05.yaml
+++ b/config_0_05.yaml
@@ -1,16 +1,16 @@
 program: train_sb3_wandb.py
-method: bayes
-name: rel_ik_sb3_ppo_ur5e_cube_lift_0_5
+method: grid
+name: rel_ik_sb3_ppo_ur5e_reach_0_05_pose
 metric:
-  goal: minimize
-  name: train/loss
+  goal: maximize
+  name: rollout/ep_rew_mean
 
 parameters:
   seed:
     value: 42
 
-  n_timesteps: # iteration * n_steps * nenvs: 400 * 64 * 4096 = 104857600
-    value: 104857600
+  n_timesteps: # iteration * n_steps * nenvs: 300 * 64 * 4096 = 104857600 # 52428800 # 78643200
+    value: 209715200
 
   policy:
     value: 'MlpPolicy'
@@ -19,25 +19,25 @@ parameters:
     value: 64
 
   batch_size:
-    values: [1024, 2048]
+    value: 16384
 
   gae_lambda:
     value: 0.95
 
   gamma:
-    value: 0.99
+    values: [0.95, 0.99]
 
   n_epochs:
     value: 8
 
   ent_coef: # Possibly change this to encourange more exploration
-    value: 0.001
+    values: [0.01, 0.001]
 
   vf_coef:
-    value: 0.0001
+    values: [0.1, 0.01]
 
   learning_rate:
-    values: [1e-4, 5e-4, 1e-3]
+    values: [1e-4, 3e-4]
 
   clip_range:
     value: 0.2
@@ -49,9 +49,9 @@ parameters:
       net_arch:
         parameters:
           pi:
-            values: [[256, 128], [256, 128, 64]]
+            value: [128, 64]
           vf:
-            values: [[256, 128], [256, 128, 64]]
+            value: [128, 64]
 
   target_kl:
     value: 0.02
@@ -60,10 +60,10 @@ parameters:
     value: 1.0
 
   normalize_input:
-    value: True
+    value: False
 
   normalize_value:
-    value: True
+    value: False
 
   clip_obs:
-    value: 5
+    value: 50.0
