--- a/config_sb3_td3.yaml
+++ b/config_sb3_td3.yaml
@@ -1,7 +1,7 @@
 # Reference: https://github.com/DLR-RM/rl-baselines3-zoo/blob/master/hyperparams/sac.yml
 program: train_sb3_wandb_td3.py
 method: grid
-name: rel_ik_sb3_td3_ur5e_lift_cube_0_05
+name: rel_ik_sb3_td3_ur5e_lift_cube_0_05_noise_1_0
 metric:
   goal: maximize
   name: rollout/ep_rew_mean
@@ -20,13 +20,13 @@ parameters:
     value: 'MlpPolicy'
 
   batch_size:
-    values: [256, 512] 
+    value: 256 
 
   gamma:
     value: 0.95
 
   learning_rate:
-    values: [1e-4, 3e-4]
+    value: 3e-4
 
   train_freq:
     value: 4
@@ -47,7 +47,7 @@ parameters:
     value: 0.02
 
   target_policy_noise:
-    values: [0.2, 0.4]
+    value: 0.2
 
   target_noise_clip:
     value: 0.5
