Add action_sigma parameter for bayes optimization

--- a/config_sb3_td3.yaml
+++ b/config_sb3_td3.yaml
@@ -61,6 +61,10 @@ parameters:
   action_noise:
     value: NormalActionNoise
 
+  action_sigma:
+    min: 0.001
+    max: 0.1
+
   # replay_buffer_class: 
   #   value: "HerReplayBuffer"
 
