--- a/gym_env/env/agents/rl_games_ppo_cfg.yaml
+++ b/gym_env/env/agents/rl_games_ppo_cfg.yaml
@@ -47,10 +47,10 @@ params:
     multi_gpu: False
     ppo: True
     mixed_precision: False
-    normalize_input: True
-    normalize_value: True
+    normalize_input: False #True
+    normalize_value: False #True
     value_bootstrap: False
-    num_actors: -1
+    num_actors: 2048
     reward_shaper:
       scale_value: 0.01
     normalize_advantage: True
@@ -70,7 +70,7 @@ params:
     truncate_grads: True
     e_clip: 0.2
     horizon_length: 24
-    minibatch_size: 98304 # 48 # 1536 # 6144 # 24576 # Should be equal to horizon_length * num_actors where num_actors = num_envs
+    minibatch_size: 49152 # 98304 # 48 # 1536 # 6144 # 24576 # Should be equal to horizon_length * num_actors where num_actors = num_envs
     mini_epochs: 8
     critic_coef: 4
     clip_value: True
