Update rl_games parameters

--- a/gym_env/env/agents/rl_games_ppo_cfg.yaml
+++ b/gym_env/env/agents/rl_games_ppo_cfg.yaml
@@ -52,7 +52,7 @@ params:
     value_bootstrap: False
     num_actors: 2048
     reward_shaper:
-      scale_value: 0.01
+      scale_value: 1.0 # 0.01
     normalize_advantage: True
     gamma: 0.99
     tau: 0.95
