Add skrl implementation

--- a/gym_env/env/agents/skrl_ppo_cfg.yaml
+++ b/gym_env/env/agents/skrl_ppo_cfg.yaml
@@ -40,16 +40,22 @@ memory:
 # https://skrl.readthedocs.io/en/latest/api/agents/ppo.html
 agent:
   class: PPO
-  rollouts: 96
-  learning_epochs: 8
-  mini_batches: 4 # 96 * 2048 / 98304
+
+  # n_steps from sb3
+  rollouts: 96 
+
+  # n_epochs from sb3
+  learning_epochs: 8 
+
+  # Total collected data in each training iteration / batch_size
+  mini_batches: 12 # 96 * 2048 / 98304 -> equation provided by skrl or use 96 * 2048 / batch_size (e.g. 16384)
   discount_factor: 0.99
   lambda: 0.95
-  learning_rate: 1e-3
+  learning_rate: !!float 1e-3
   learning_rate_scheduler: KLAdaptiveLR
   learning_rate_scheduler_kwargs:
     kl_threshold: 0.01
-    min_lr: 1e-5
+    min_lr: !!float 1e-5
   state_preprocessor: RunningStandardScaler
   state_preprocessor_kwargs: null
   value_preprocessor: RunningStandardScaler
@@ -63,14 +69,18 @@ agent:
   entropy_loss_scale: 0.01
   value_loss_scale: 1.0
   kl_threshold: 0.0
-  rewards_shaper_scale: None
+  rewards_shaper_scale: 1.0
   time_limit_bootstrap: True
   # logging and checkpoint
   experiment:
-    directory: "UR5e-Lift-Cube-IK"
+    directory: "ppo/UR5e-Lift-Cube-IK"
+    headless: True
     experiment_name: ""
     write_interval: auto
     checkpoint_interval: auto
+    wandb: True
+    wandb_kwargs:
+      entity: jofan23-university-of-southern-denmark
 
 # agent:
 #   class: PPO
@@ -110,5 +120,5 @@ agent:
 # https://skrl.readthedocs.io/en/latest/api/trainers/sequential.html
 trainer:
   class: SequentialTrainer
-  timesteps: 98304
+  timesteps: 104857600 # 98304
   environment_info: log
