--- a/config_sb3_ppo.yaml
+++ b/config_sb3_ppo.yaml
@@ -1,6 +1,6 @@
 program: train_sb3_wandb_ppo.py
 method: grid
-name: rel_ik_sb3_ppo_ur5e_lift_cube_0_05_hand_e_num_env_test
+name: rel_ik_sb3_ppo_ur5e_lift_cube_0_05_hand_e_original_params
 metric:
   goal: maximize
   name: rollout/ep_rew_mean
@@ -10,37 +10,37 @@ parameters:
     value: 42
 
   num_envs:
-    values: [128, 1024]
+    value: 2048
 
-  n_timesteps: # iteration * n_steps * nenvs: 1000 * 64 * 4096 = 262144000 # 52428800 # 78643200
-    value: 262144000
+  n_timesteps: # Total number of environment interactions: iteration * n_steps * num_envs: 1000 * 64 * 4096 = 262144000 # 52428800 # 78643200
+    value: 104857600
 
   policy:
     value: 'MlpPolicy'
 
-  n_steps:
+  n_steps: # Number of steps each environment runs before the collected data is used for policy update
     value: 64
 
-  batch_size:
-    value: 16384
+  batch_size: # Data is divided into minibatches of size batch_size. = number of samples used for one gradient update during training
+    values: [256, 16384]
 
   gae_lambda:
     value: 0.95
 
   gamma:
-    value: 0.95
+    value: 0.99
 
-  n_epochs:
+  n_epochs: # Number of times the entire collected dataset is used to update the policz during one iteration
     value: 8
 
   ent_coef: # Possibly change this to encourange more exploration
-    value: 0.01
+    values: [0.00, 0.01]
 
   vf_coef:
-    value: 0.1
+    value: 0.0001
 
   learning_rate:
-    value: 3e-4
+    value: !!float 3e-4
 
   clip_range:
     value: 0.2
@@ -48,7 +48,7 @@ parameters:
   policy_kwargs:
     parameters:
       activation_fn: 
-        value: nn.Tanh
+        value: nn.ELU
       net_arch:
         parameters:
           pi:
@@ -57,16 +57,76 @@ parameters:
             value: [256, 128, 64]
 
   target_kl:
-    value: 0.02
+    value: 0.01
 
   max_grad_norm:
     value: 1.0
 
-  normalize_input:
-    value: False
 
-  normalize_value:
-    value: False
 
-  clip_obs:
-    value: 50.0
+
+# parameters:
+#   seed:
+#     value: 42
+
+#   num_envs:
+#     values: [128, 1024]
+
+#   n_timesteps: # Total number of environment interactions: iteration * n_steps * num_envs: 1000 * 64 * 4096 = 262144000 # 52428800 # 78643200
+#     value: 262144000
+
+#   policy:
+#     value: 'MlpPolicy'
+
+#   n_steps: # Number of steps each environment runs before the collected data is used for policy update
+#     value: 64
+
+#   batch_size: # Data is divided into minibatches of size batch_size. = number of samples used for one gradient update during training
+#     value: 16384
+
+#   gae_lambda:
+#     value: 0.95
+
+#   gamma:
+#     value: 0.95
+
+#   n_epochs: # Number of times the entire collected dataset is used to update the policz during one iteration
+#     value: 8
+
+#   ent_coef: # Possibly change this to encourange more exploration
+#     value: 0.01
+
+#   vf_coef:
+#     value: 0.1
+
+#   learning_rate:
+#     value: 3e-4
+
+#   clip_range:
+#     value: 0.2
+
+#   policy_kwargs:
+#     parameters:
+#       activation_fn: 
+#         value: nn.Tanh
+#       net_arch:
+#         parameters:
+#           pi:
+#             value: [256, 128, 64]
+#           vf:
+#             value: [256, 128, 64]
+
+#   target_kl:
+#     value: 0.02
+
+#   max_grad_norm:
+#     value: 1.0
+
+#   normalize_input:
+#     value: False
+
+#   normalize_value:
+#     value: False
+
+#   clip_obs:
+#     value: 50.0
