--- a/config_sb3_ppo.yaml
+++ b/config_sb3_ppo.yaml
@@ -13,31 +13,31 @@ parameters:
     value: 2048
 
   n_timesteps: # Total number of environment interactions: iteration * n_steps * num_envs: 1000 * 64 * 4096 = 262144000 # 52428800 # 78643200
-    value: 104857600
+    value: 209715200
 
   policy:
     value: 'MlpPolicy'
 
   n_steps: # Number of steps each environment runs before the collected data is used for policy update
-    value: 64
+    value: 128
 
   batch_size: # Data is divided into minibatches of size batch_size. = number of samples used for one gradient update during training
-    values: [256, 16384]
+    value: 16384
 
   gae_lambda:
     value: 0.95
 
   gamma:
-    value: 0.99
+    value: 0.95
 
   n_epochs: # Number of times the entire collected dataset is used to update the policz during one iteration
     value: 8
 
   ent_coef: # Possibly change this to encourange more exploration
-    values: [0.00, 0.01]
+    value: 0.01
 
   vf_coef:
-    values: [0.0001, 1]
+    values: [0.1, 1.0, 2.0]
 
   learning_rate:
     value: !!float 3e-4
@@ -57,7 +57,7 @@ parameters:
             value: [256, 128, 64]
 
   target_kl:
-    value: 0.01
+    value: 0.02
 
   max_grad_norm:
     value: 1.0
