--- a/sb3/config_sb3_ppo.yaml
+++ b/sb3/config_sb3_ppo.yaml
@@ -1,6 +1,6 @@
 program: train_sb3_wandb_ppo.py
 method: grid
-name: rel_ik_sb3_ppo_ur5e_lift_cube_0_05_hand_e_final_v2
+name: rel_ik_sb3_ppo_ur5e_lift_cube_0_05_hand_e_final_v3
 metric:
   goal: maximize
   name: rollout/ep_rew_mean
@@ -10,16 +10,16 @@ parameters:
     value: 42
 
   num_envs:
-    value: 2048
+    values: [2048, 4096]
 
   n_timesteps: # Total number of environment interactions: iteration * n_steps * num_envs: 1000 * 64 * 4096 = 262144000 # 52428800 # 78643200
-    value: 209715200
+    value: 262144000
 
   policy:
     value: 'MlpPolicy'
 
   n_steps: # Number of steps each environment runs before the collected data is used for policy update
-    value: 128
+    value: 64
 
   batch_size: # Data is divided into minibatches of size batch_size. = number of samples used for one gradient update during training
     value: 16384
@@ -37,7 +37,7 @@ parameters:
     value: 0.01
 
   vf_coef:
-    values: [0.1, 1.0, 2.0]
+    value: 0.1
 
   learning_rate:
     value: !!float 3e-4
@@ -48,7 +48,7 @@ parameters:
   policy_kwargs:
     parameters:
       activation_fn: 
-        value: nn.Tanh
+        values: [nn.Tanh, nn.ELU]
       net_arch:
         parameters:
           pi:
