--- a/sb3/config_sb3_ppo_domain_rand.yaml
+++ b/sb3/config_sb3_ppo_domain_rand.yaml
@@ -1,6 +1,6 @@
-program: train_sb3_wandb_ppo.py
+program: train_sb3_wandb_ppo_domain_rand.py
 method: grid
-name: rel_ik_sb3_ppo_ur5e_lift_cube_0_05_hand_e
+name: rel_ik_sb3_ppo_ur5e_lift_cube_0_05_hand_e_domain_rand
 metric:
   goal: maximize
   name: rollout/ep_rew_mean
