--- a/sb3/config_sb3_ppo_domain_rand.yaml
+++ b/sb3/config_sb3_ppo_domain_rand.yaml
@@ -7,19 +7,20 @@ metric:
 
 parameters:
   seed:
-    values: [42, 24]
+    value: 42
+    # values: [42, 24]
 
   num_envs:
     value: 2048
 
   n_timesteps: # Total number of environment interactions: iteration * n_steps * num_envs: 1000 * 64 * 4096 = 262144000 # 52428800 # 78643200
-    value: 262144000
+    value: 524288000
 
   policy:
     value: 'MlpPolicy'
 
   n_steps: # Number of steps each environment runs before the collected data is used for policy update
-    value: 32
+    values: [32, 64]
 
   batch_size: # Data is divided into minibatches of size batch_size. = number of samples used for one gradient update during training
     value: 16384
