--- a/sb3/config_sb3_ppo_domain_rand.yaml
+++ b/sb3/config_sb3_ppo_domain_rand.yaml
@@ -1,6 +1,6 @@
 program: train_sb3_wandb_ppo_domain_rand.py
 method: grid
-name: rel_ik_sb3_ppo_ur5e_lift_cube_0_05_hand_e_domain_rand_with_small_friction_and_without_mass_v3
+name: rel_ik_sb3_ppo_ur5e_lift_cube_0_05_hand_e_domain_rand_with_small_friction_and_without_mass_v4
 metric:
   goal: maximize
   name: rollout/ep_rew_mean
@@ -20,7 +20,7 @@ parameters:
     value: 'MlpPolicy'
 
   n_steps: # Number of steps each environment runs before the collected data is used for policy update
-    values: [64, 32]
+    value: 64
 
   batch_size: # Data is divided into minibatches of size batch_size. = number of samples used for one gradient update during training
     value: 16384
